--- a/takeaway/templates/takeaway/piatto_create.html
+++ b/takeaway/templates/takeaway/piatto_create.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
-{% block content %}
-<div class="container py-5">
-    <h2 class="mb-4 text-center">Aggiungi un nuovo piatto</h2>
+{% load crispy_forms_tags %}
 
+{% block content %}
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-        <div class="mt-3 text-center">
-            <input type="submit" class="btn btn-secondary" value="Save">
+        {{ form|crispy }}
+
+        <div class="mt-4 text-center">
+            <button type="submit" class="btn btn-success px-4">Salva</button>
+            <a href="{% url 'takeaway:piatti' %}" class="btn btn-outline-secondary ms-2">Annulla</a>
         </div>
     </form>
-</div>
 {% endblock %}
