--- a/takeaway/templates/takeaway/piatto_update.html
+++ b/takeaway/templates/takeaway/piatto_update.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<form method="post">{%csrf_token%}
-  {{ form.as_p }}
-  <input type="submit" value="Modifica piatto">
-</form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% load crispy_forms_tags %}
+
+{% block content %}
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form|crispy }}
+
+        <div class="mt-4 text-center">
+            <button type="submit" class="btn btn-success px-4">Salva</button>
+            <a href="{% url 'takeaway:piatti' %}" class="btn btn-outline-secondary ms-2">Annulla</a>
+        </div>
+    </form>
+{% endblock %}
