--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,10 @@
           {% endif %}
 
           {% if "Clienti" in user.groups.all.0.name %}
-            <li class="nav-item"><a class="nav-link" href="{% url 'takeaway:carrello' %}">Carrello</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'takeaway:ordini' %}">I miei Ordini</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'takeaway:carrello' %}">Carrello</a></li>
+          {% elif "Dipendenti" in user.groups.all.0.name %}
+            <li class="nav-item"><a class="nav-link" href="{% url 'takeaway:ordini' %}">Ordini</a></li>
           {% endif %}
         </ul>
 
