--- a/takeaway/templates/takeaway/carrello/checkout.html
+++ b/takeaway/templates/takeaway/carrello/checkout.html
@@ -29,7 +29,7 @@
     </li>
 
     <li class="list-group-item d-flex justify-content-between fw-bold">
-        sconto
+        Sconto
         <span>
             {{ sconto }} &euro;
         </span>
